# jupyterhub-images

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
.github/workflows/: build-manual.yml  build.yml  pre-commit.yml
astronomy/: Dockerfile  environment.yml
astronomy/welcome/: welcome.md
datascience/: Dockerfile  environment.yml
datascience/welcome/: welcome.md
iraf/: Dockerfile  environment.yml
iraf/assets/: bashrc-snippet  hide-xfce-panel.sh  iraf-cl  jupyter_server_config.py  linea-desktop-bg.desktop  linea-ds9-cl-inner.sh  linea-ds9-cl.desktop  linea-hide-xfce-panel.desktop  linea-saods9.desktop  linea-terminal.desktop  linea-topcat.desktop  linea-xfce-hide-logout.desktop  linea-xfce-hide-logout.sh  linea-xterm.desktop  login.cl  set-linea-desktop-bg.sh  test-iraf-cl.sh  xfce-logout-disabled.sh
iraf/assets/applications/: xfce4-session-logout.desktop
iraf/assets/patches/: xfce4-session-linea-no-remote-session-end.patch
iraf/assets/remote-desktop/: index.html  linea-desktop-topbar.css
iraf/assets/xfce-perchannel-xml/: xfce4-desktop.xml  xfce4-session.xml
notebook-templates/teste/: teste.ipynb
scripts/before-notebook.d/: 10-init-tutorials.sh  20-init-iraf.sh
setup_ai/: 15-init-jupyter-ai.sh  linea-load-apikeys.sh  linea-setup-apikeys.sh  linea_jupyter_ai_learn_patch.py  setup_ai_config.py  sitecustomize.py
setup_ai/linea_provider/: pyproject.toml
setup_ai/linea_provider/src/linea_provider/: provider.py
solar-system/: Dockerfile
solarsystem/: Dockerfile  environment.yml
solarsystem/welcome/: welcome.md
